--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,5 +7,9 @@ services:
     ports:
       - "8085:80"
     restart: always
+    networks:
+      - nginx-proxy-manager_default
 
-
+networks:
+  nginx-proxy-manager_default:
+    external: true
