Fix: Create docker network if missing in deploy script

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,4 +27,5 @@ jobs:
             else
               git pull origin main
             fi
+            docker network create nginx-proxy-manager_default || true
             docker compose up -d --build
